tests/ui/parser/contract_function_shared_name.stderr
error: Functions are not allowed to have the same name as the contract.
        If you intend this to be a constructor, use "constructor(...) { ... }" to define it.
  --> ROOT/tests/ui/parser/contract_function_shared_name.sol:LL:CC
   |
LL |     function C() public {}
   |              ^
   |

error: aborting due to 1 previous error

